tests/NormalTests/paczka1/small_fuzzy/71755740.err
Error in line 1: UbX A139 24,0
Error in line 4: SWdmeY S918 49,7
Error in line 9: SWdmeY S933 99,3
